--- a/views/user.html
+++ b/views/user.html
@@ -18,6 +18,9 @@
 <body>
     <h1>Theo</h1>
     <section id="list"></section>
+    <div id="recommend">
+      <p>Recommended for this item:</p>
+    </div>
     <script type="text/babel" src="/js/user.js"></script>
 </body>
 </html>
