--- a/public/css/user.css
+++ b/public/css/user.css
@@ -4,7 +4,6 @@ body{
   width: 1000px;
 }
 .theo-panel{
-  /*margin - 20px * 2*/
   height: 300px;
   background: #F3F3F3;
   box-shadow: 0px 4px 6px 0px rgba(158,158,158,0.50), inset 0px 4px 6px 0px rgba(255,255,255,0.50);
@@ -14,35 +13,89 @@ body{
   cursor:pointer;
 }
 
-.theo-panel img{
-  max-width:100%;
+.theo-panel .img-container{
+  width: 100%;
+  margin: 0;
+  height: 100%;
 }
-
+.theo-panel img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.theo-panel p{
+  margin-bottom: 0;
+}
 #cart{
-  width: 200px;
+  width: 250px;
   position: fixed;
+  margin: 0;
   right: 0;
   top: 50px;
 }
-@media screen and (max-width: 780px) {
-    #cart {
-        display: none;
-    }
-}
-
 .cart-panel{
+  margin: 10px;
   height: 100px;
   background: #F3F3F3;
   box-shadow: 0px 4px 6px 0px rgba(158,158,158,0.50), inset 0px 4px 6px 0px rgba(255,255,255,0.50);
   padding: 0!important;
   overflow: hidden;
   text-align: center;
+  cursor: pointer;
+}
+.cart-panel .img-container{
+  width: 100%;
+  height: 100px;
+  margin: 0;
+}
+.cart-panel img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 
 }
 
-.test{
-  height:50px;
-  width:50px;
-  background-color: red;
+@media screen and (max-width:1000px) {
+    #cart {
+        display: none;
+    }
+    #recommend {
+        display: none;
+    }
+}
+
+
+
+.recommend-panel{
+  height: 100px;
+  background: #F3F3F3;
+  box-shadow: 0px 4px 6px 0px rgba(158,158,158,0.50), inset 0px 4px 6px 0px rgba(255,255,255,0.50);
+  padding: 0!important;
+  overflow: hidden;
+  text-align: center;
   cursor: pointer;
+  margin: 10px;
+}
+
+.recommend-panel .img-container{
+  width: 100%;
+  height: 100px;
+  margin: 0;
+}
+.recommend-panel img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+
+}
+
+#recommend{
+  width: 300px;
+  height: 160px;
+  box-shadow: 0px 0px 6px 0px rgba(158,158,158,0.50), inset 0px 4px 6px 0px rgba(255,255,255,0.50);
+  position:fixed;
+  bottom: 0;
+  right: 0;
+  background-color: white;
+  margin:0;
 }
