--- a/views/expert.html
+++ b/views/expert.html
@@ -5,6 +5,7 @@
   <meta name="description" content="My Parse App">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/expert.css">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -25,9 +26,9 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-1">
+      <div class="col-md-2">
         <p>what goes well?</p>
-        <button id="save">save</button>
+        <button id="save-btn">save</button>
       </div>
       <div class="col-md-4">
         <img id="compare" src="#"/>
